2002-03-28  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* Netcomics/Util.pm (image_size): Made warning about Image::Size
	not being installed only printed if extra verbose.
	* Makefile.PL: Removed spex.
	* MANIFEST: Removed spex.

2002-03-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/comicspage_ed: removed all sizes because of the inconsistency.
	* lib/ucomics: updated some sizes

2002-03-27  Elliot Glaysher  <glaysher@umich.edu>

	* lib/spex: Comic appears to have died.
	* lib/sluggy_freelance (sluggy): Note to self: Remove your debugging
	messages BEFORE making a commit.

2002-03-27  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/creators_syndicate: Removed Pen Men & Teenage Mutant Ninja
	Turtles; fixed sizes on all comics.
	* lib/alexsrestaurant (alex): Fixed archive & weekday size.
	* Netcomics/HTML/Themes/NoStatus.pm: new theme which doesn't
	include the status column in the index.
	* Netcomics/HTML/Theme.pm: Fixed mis-named html_key.
	(generate_images): Changed to "require" MIME::Base64 instead of
	"use" so as to relieve dependency just for theme image support.
	* Netcomics/HTML/Set.pm (create_set_of_pages): Updated elements
	to replace to match everything in Page.pm.  Added replacing common
	elements & simplified code.  Added creating a symlink to the
	standard webpage index filename if multiple index pages.
	* Netcomics/HTML/Page.pm (generate): Fixed links section to grab
	the one with the link to the index if generated.  Made the top
	links & bottom links different to match up with the index of the
	first & last comic on each page.  Made all sections parsed for
	common elements to replace.
	* doc/netcomics.pod: Fixed -t not being surrounded by B<>.

2002-03-26  Elliot Glaysher  <glaysher@umich.edu>

	* Netcomics/Factory.pm (build_date_array):  Hopefully fix the date
	problems for *everybody* this time.

2002-03-26  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* lib/keenspot (youdamn): Changed to use an "exists" list instead